<resources>
    <string name="app_name">吃了么</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="foodRec">美食</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="loginUserNameHint">请输入手机号</string>
    <string name="loginPassWordHint">请输入密码</string>
    <string name="signInButtonName">登录</string>
    <string name="findPassWord">找回密码</string>
    <string name="signUp">注册</string>
    <string name="logoImageView">登录时本app的logo</string>
    <string name="signUpPasswordHint">请设置您的密码</string>
    <string name="signUpVerificationCodeHint">请输入验证码</string>
    <string name="securityQuestionHint">请输入密保问题</string>
    <string name="securityAnswerHint">请输入密保答案</string>
    <string name="securityQuestion">密保问题</string>
    <string name="securityAnswer">密保答案</string>
    <string name="phoneChinaCode">+86</string>
    <string name="verificationCode">验证码</string>
    <string name="password">密码</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="findPassword">找回密码</string>
    <string name="securityQuestionPlaceHolder">密保问题占位</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="post">帖子</string>
    <string name="用户昵称">nickeName</string>
    <string name="uid">uid: %d</string>
    <string name="attentionNumber">%d</string>
    <string name="fansNumber">%d</string>
    <string name="postNumber">%d</string>
    <string name="userImageContentDescription">用户头像</string>
    <string name="browseHistory">浏览历史</string>
    <string name="historyNumber">历史数: %d</string>
    <string name="myFavorite">我的收藏</string>
    <string name="favoriteNumber">收藏数: %d</string>
    <string name="myLike">我点赞的</string>
    <string name="likeNumber">点赞数: %d</string>
    <string name="setting">设置</string>
    <string name="compusRestaurant">校园餐饮</string>
    <string name="physicalStore">实体店</string>
    <string name="OnlineShopping">网购</string>
    <string name="messageRely">回复我的</string>
    <string name="messageLikes">我收到的赞</string>
    <string name="recommend">推荐</string>
    <string name="attetion">关注</string>
    <string name="ic_campusRestaurant">校园餐饮icon</string>
    <string name="takeout">外卖</string>
    <string name="editInfo">编辑</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="setting_phone">手机号</string>
    <string name="setting_modify_password">修改账户密码</string>
    <string name="setting_about">关于</string>
    <string name="setting_logout">退出登录</string>
    <string name="post_headline">标题</string>
    <string name="post_content">内容</string>
    <string name="post_select_image">+</string>
    <string name="food_rec_classify">分类：</string>
    <string name="post_recommend">综合推荐：</string>
    <string name="post_post">发布</string>
    <string name="post_imageView">发帖时选择的图片</string>
    <string name="edit_nikeName">昵称</string>
    <string name="edit_intro">简介</string>
    <string name="edit_avatar">头像</string>
    <string name="edit_space_cover">空间封面</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_password_verification_code">验证码</string>
    <string name="modify_password_password">密码</string>
    <string name="mine_personal_info">个人信息</string>
    <string name="mine_personal_space">个人空间</string>
    <string name="space_attention_number">%d 关注</string>
    <string name="space_fans_number">%d 粉丝</string>
    <string name="space_post_number">%d 帖子</string>
    <string name="image_view_content_description">图片无聊的说明</string>
    <string name="setting_chatRoom">吃喝聊天室</string>
    <string name="dialog_positive_button">确定</string>
    <string name="dialog_negative_button">取消</string>
    <string name="mine_attention_number">%d 关注</string>
    <string name="mine_fans_number">%d 粉丝</string>
    <string name="mine_post_number">%d 帖子</string>
    <string name="post_ratingBar_initScore">0.0</string>
    <string name="evaluate">校园</string>
    <string name="doityourself">自己做</string>
    <string name="attention_button">+关注</string>
    <string name="comment_number">评论 %d</string>
    <string name="statistics">%d</string>
    <string name="food_rec_recommend_score">楼主评分 %.2f</string>
    <string name="recyclerView_comment_footer">什么都没有 快来评论吧</string>
    <string name="comment_reply">回复</string>
    <string name="evaluate_store_name">店名</string>
    <string name="evaluate_dish">菜品</string>
    <string name="evaluate_comment">点评</string>
    <string name="evaluate_image_button">+</string>
    <string name="evaluate_hall_name">食堂</string>
    <string name="evaluate_score">打分</string>
    <string name="evaluate_button_post">发布</string>
    <string name="chat_room_send">发送</string>
    <string name="dynamic">动态</string>
    <string name="mine_food_gallery">美食图库</string>
    <string name="mine_hot_list">一周热榜</string>

</resources>
