<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_blue_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/evaluateFragment"
        android:icon="@drawable/school"
        android:title="@string/evaluate" />
    <item
        android:id="@+id/partitionFragment"
        android:icon="@drawable/ic_partition_blue_24dp"
        android:title="@string/partition" />
    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_message_blue_24dp"
        android:title="@string/message" />
    <item
        android:id="@+id/mineFragment"
        android:icon="@drawable/ic_mine_blue_24dp"
        android:title="@string/mine" />
</menu>