<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.ForgetPasswordFragment">


    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loginUserNameHint"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextSecurityAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/securityAnswerHint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textViewSecurityQuestion"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonFindPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/findPassword"
        android:textSize="@dimen/middleFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextSecurityAnswer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextSecurityAnswer"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/securityQuestion"
        android:textSize="@dimen/smallPlusFont"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/securityAnswer"
        android:textSize="@dimen/smallPlusFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verificationCode"
        android:textSize="@dimen/smallPlusFont"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <EditText
        android:id="@+id/editTextVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signUpVerificationCodeHint"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/editTextUserName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneChinaCode"
        android:textSize="@dimen/middleFont"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGetVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getVerificationCode"
        android:textSize="@dimen/smallPlusFont"
        app:layout_constraintBottom_toTopOf="@+id/editTextVerificationCode"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <TextView
        android:id="@+id/textViewSecurityQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/securityQuestionPlaceHolder"
        android:textSize="@dimen/middleFont"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/editTextVerificationCode"
        tools:text="我的生日？" />


</androidx.constraintlayout.widget.ConstraintLayout>